[package]
name = "ssh-home"
version = "0.1.0"
authors = ["Daniel Sockwell <dsockwell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap" }
run_script = "0.6.0"
boolinator = "2.4.0"
utils = {path = "../utils"}

[profile.release]
lto = true